header-overflow fixed

--- a/src/app/components/banner/banner.component.css
+++ b/src/app/components/banner/banner.component.css
@@ -2,6 +2,7 @@
   background-image: url("https://www.virtuwell.com/assets/images/hero_inside-virtuwell.webp");
   background-repeat: no-repeat;
    background-size: cover;
+   margin-top: 4rem;
   height: 80vh;
   width: 100%;
   /* margin-top: 1rem; */
