--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,7 +1,8 @@
 mat-toolbar {
   background-color: white;
-  /* position: fixed; */
-  /* margin-top: 0.5rem; */
+  position: fixed;
+  top: 0;
+  z-index: 1;
 }
 
 #nav_contents {
@@ -35,10 +36,5 @@ mat-toolbar {
   color: white;
   padding: 0.2rem 1.25rem;
   border-radius: 0%;
-  display: none;
-}
-
-.contents-signin {
-  margin-left: 7rem;
-  
+  /* display: none; */
 }
